--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -80,7 +80,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Stage1. Business Case \n",
+        "# Stage1. Business Analysis \n",
         "\n",
         "Define key performance indicators (KPIs). \n",
         "Data needed, outcomes, model risk level, communication strategy.\n",
@@ -96,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Stage2. Data\n",
+        "# Stage2. Data Process\n",
         "\n",
         "Next we load the data we need to achieve our business aims, wrangle it and prepare it."
       ],
@@ -1091,7 +1091,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Stage4: Model Design \n",
+        "# Stage3: Model Design \n",
         "\n",
         "Now we need to take what we have learned about the data, and find an appropriate model to achieve our KPIs."
       ],
@@ -1103,7 +1103,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Stage 4a: Test the performance of different up, and down sampling approaches"
+        "## Stage 3a: Test the performance of different up, and down sampling approaches"
       ],
       "metadata": {
         "id": "c0ubSKhBH-pg"
@@ -2374,7 +2374,7 @@
         "id": "66bfe3c2"
       },
       "source": [
-        "## Stage 4b: Model Selection\n",
+        "## Stage 3b: Model Selection\n",
         "\n",
         "\n",
         "Next we need to select the type of classifier we are going to use to model our problem and separate good from bad credits. We could just make a heuristic selection, but we are likely to be biased in making this selection. \n",
@@ -2818,7 +2818,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Stage 4c: KPI Checks - Most importantly checks for Fairness.\n",
+        "## Stage 3c: KPI Checks - Most importantly checks for Fairness.\n",
         "\n",
         "We noted at the outset that there was a bias between the protected characterisctis of gender, with male and female credits being different, and we removed this protected characteristic from the dataset to avoid this illegal bias in loan approval outcomes.\n",
         "\n",
@@ -2896,7 +2896,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Stage5: Model Deployment \n",
+        "# Stage4: Model Deployment \n",
         "\n",
         "Model deployment generally involves a change process, several levels of testing and sign off, asignment of responsibilities for the live operation of the process, models and data before deployiong the code to the cloud (or on native hardware). \n",
         "A key part of thius stage is communication of the KPIs to stakleholders to enable them to understand the way the models operate, the risks involved and to be accountable for deploying the models\n"
