--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -2909,7 +2909,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Communication: Stakeholder Oriented Explanations\n",
+        "##Stage4a: Change Control\n",
+        "\n",
+        "The most critical stage in model release is the change control, where accountability for the models shifts from development personnel to business personnel. Typically, a model will go through  multiple stages of testing and approval. Initially testing will be conducted by model development staff, and then when they are satisfied with performance, it will be tested by independent analysts (sometimes call \"Quality Assurance\" analysts, or testers), to ensure the models are sound and that KPIs are being met. At this stage of acceptance models will start being tested by business personnel."
+      ],
+      "metadata": {
+        "id": "gr7XkHWFX2HG"
+      },
+      "id": "gr7XkHWFX2HG"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Stage4b Communication: Stakeholder Oriented Explanations\n",
         "\n",
         "Communication of how the model has reached the outcomes it is has, is crutial to achieve fairness, transparency, accountability, and trust in the whole process. Each stakeholder in the process needs to see different elements. The Data Scientist and technical leadership need to review the nut and bolts of the model, reviewing residuals plots, parameter importance, interaction terms and many other metrics. The customer needs to see far less information, and mainly that associated with a refusal of credit. Compliance resources and regulators need to see something different again, such as fairness regarding protected characteristics, the accuracy and therefore capital risk represented by the models. \n",
         "In this section we look at stakeholder oriented explanations and we will be using standard charts of important analytics, such as residual plots, and SHAP.\n",
