--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -90,9 +90,12 @@
       "cell_type": "markdown",
       "source": [
         "### Stage1 Business Analysts Governance Utilities\n",
+        "In Stage1, Business Analysis, we will find that we have several stakeholders for the model. We need analytics to verify that we are attaining good performance on each stakeholder's key performance indicators (KPI). (There is also the communication of how our model has achieved these KPIs which we will address towards the end of the workflow).\n",
         "\n",
-        "#### Stakeholder KPIs\n",
-        "In Stage1, Business Analysis, we will find that we have several stakeholders for the model. We need analytics and visualizations to verify that we are attaining good performance on each stakeholder's key performance indicators (KPI) We list the stakeholder governance functions we will use as utilities in this case study now..."
+        " We list the stakeholder governance functions we will use as utilities in this case study now...\n",
+        "\n",
+        "##### Stakeholder KPIs: Customer\n",
+        "We assume for this case study that the customer KPI is whether they achieve they achieve a positive credit decision. In practie this would extend to the amount of credit extended, and for refusals, why the refusal had been made - and this element we will cover towards the end of the use-case. "
       ],
       "metadata": {
         "id": "wbY4WfepSk9J"
@@ -100,14 +103,37 @@
       "id": "wbY4WfepSk9J"
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "##### Stakeholder KPIs: Regulatory"
+      ],
       "metadata": {
-        "id": "taD3OFr4J-W6"
+        "id": "FWSZilgXwi6x"
       },
-      "id": "taD3OFr4J-W6",
-      "execution_count": 77,
+      "id": "FWSZilgXwi6x"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@@@@@@ FAIRNESS CODE IN HERE...."
+      ],
+      "metadata": {
+        "id": "PdofXy0ywmAL"
+      },
+      "id": "PdofXy0ywmAL",
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "##### Stakeholder KPIs: Analyst"
+      ],
+      "metadata": {
+        "id": "ORuFUeGXwfcb"
+      },
+      "id": "ORuFUeGXwfcb"
     },
     {
       "cell_type": "code",
@@ -169,16 +195,6 @@
         "id": "2rm-orUwNZ8W"
       },
       "id": "2rm-orUwNZ8W",
-      "execution_count": 78,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "B9ivmpHHJgpX"
-      },
-      "id": "B9ivmpHHJgpX",
       "execution_count": 78,
       "outputs": []
     },
@@ -1276,12 +1292,12 @@
         "df_stats[(df_stats['cat_proportion'] == df_stats['cat_proportion'].max())]"
       ],
       "metadata": {
-        "id": "fMsVk4TjmVmR",
-        "outputId": "7a8c239a-6090-4dad-f5aa-54c33e64c128",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "fMsVk4TjmVmR",
+        "outputId": "7a8c239a-6090-4dad-f5aa-54c33e64c128"
       },
       "id": "fMsVk4TjmVmR",
       "execution_count": 321,
@@ -3153,198 +3169,6 @@
         "# Imbalanced y classes?\n",
         "temp = pd.concat([X_upsampled_smote, y_upsampled_smote], axis=1)\n",
         "imbalanced_y_check(temp['class'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pd.DataFrame(temp['class'])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 423
-        },
-        "id": "V2Ky9T8DXIAj",
-        "outputId": "22d5487d-6115-4001-e455-f6e0b3fba3b5"
-      },
-      "id": "V2Ky9T8DXIAj",
-      "execution_count": 108,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "     class\n",
-              "0        0\n",
-              "1        1\n",
-              "2        0\n",
-              "3        0\n",
-              "4        0\n",
-              "..     ...\n",
-              "963      1\n",
-              "964      1\n",
-              "965      1\n",
-              "966      1\n",
-              "967      1\n",
-              "\n",
-              "[968 rows x 1 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-2cc64ebf-9363-440c-aca6-b27b9cb0025d\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>class</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>963</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>964</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>965</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>966</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>967</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>968 rows × 1 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2cc64ebf-9363-440c-aca6-b27b9cb0025d')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-2cc64ebf-9363-440c-aca6-b27b9cb0025d button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2cc64ebf-9363-440c-aca6-b27b9cb0025d');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 108
-        }
       ]
     },
     {
