--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -44,7 +44,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Utilities: Governance and Fairness\n",
+        "# Utilities: Governance and Fairness\n",
         "\n",
         "First we will declare and introduce the functions we will be using to implement the Governance Framework, and principles of Fairness in our process.\n",
         "\n",
@@ -58,7 +58,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Governance Framework and Utility Function Overview\n",
+        "## Governance Framework and Utility Function Overview\n",
         "\n",
         "A Governance framework ensures models in an organisation achieve all their key stakeholder requirements satisfactorily, and in a safe, verifiable way. In this section we introduce functions we will use lter in thje use-case to control and monitor model development process to ensure our aims are achieved.\n",
         "\n",
@@ -66,19 +66,19 @@
         "\n",
         "We discuss the 5 stages of model development and the utility functions that can be used to support the Governance Framework:\n",
         "\n",
-        "##### Stage1: Business Analysis\n",
+        "#### Stage1: Business Analysis\n",
         "We first define our stakeholder KPIs, which should be systematically defined. We introduce example functions that go some way to representing stakeholder KPIs, with visualizations, statistical tests and checks where appropriate. \n",
         "\n",
-        "##### Stage2: Data Process\n",
+        "#### Stage2: Data Process\n",
         "Exploratory data analysis goes some way to examining the quality and nature of the data, looking at distributions, correlations, imbalances in the data. We use some utility functions to support this.\n",
         "\n",
-        "##### Stage3: Model Design and Development\n",
+        "#### Stage3: Model Design and Development\n",
         "From a governance point of view, model design and development is more qualitative, and requires good practice, statitically and in terms of the code implementation. Good commenting is essential, sanity checking of input and return values is advised, and in Python clear parameter declaration and control of source code, and code versions is essential. \n",
         "\n",
-        "##### Stage4: Model Deployment\n",
+        "#### Stage4: Model Deployment\n",
         "Model deployment involes multie stages of testing and authorization. We propose a challenger model to conduct part of this process, which is also used in the monitoring and reporting stage also.\n",
         "\n",
-        "##### Stage5: Monitoring/Reporting\n",
+        "#### Stage5: Monitoring/Reporting\n",
         "During live running of the models, monitoring of data drift is essential, and for additional safety a challenger model can be run in parallel to the live model, to ensure the live model is functioning well with respect to stakeholder KPIs.\n"
       ],
       "metadata": {
@@ -89,12 +89,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Stage1 Business Analysts Governance Utilities\n",
+        "## Stage1 Business Analysts Governance Utilities\n",
         "In Stage1, Business Analysis, we will find that we have several stakeholders for the model. We need analytics to verify that we are attaining good performance on each stakeholder's key performance indicators (KPI). (There is also the communication of how our model has achieved these KPIs which we will address towards the end of the workflow).\n",
         "\n",
         " We list the stakeholder governance functions we will use as utilities in this case study now...\n",
         "\n",
-        "##### Stakeholder KPIs: Customer\n",
+        "#### Stakeholder KPIs: Customer\n",
         "We assume for this case study that the customer KPI is whether they achieve they achieve a positive credit decision. In practie this would extend to the amount of credit extended, and for refusals, why the refusal had been made - and this element we will cover towards the end of the use-case. "
       ],
       "metadata": {
@@ -105,7 +105,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### Stakeholder KPIs: Regulatory"
+        "#### Stakeholder KPIs: Regulatory"
       ],
       "metadata": {
         "id": "FWSZilgXwi6x"
@@ -128,7 +128,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "##### Stakeholder KPIs: Analyst"
+        "#### Stakeholder KPIs: Analyst"
       ],
       "metadata": {
         "id": "ORuFUeGXwfcb"
@@ -201,7 +201,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Stage 2 Data Process Governance Utilities\n",
+        "## Stage 2 Data Process Governance Utilities\n",
         "\n",
         "Exploratory data analysis goes some way to examining the quality and nature of the data, looking at distributions, correlations, imbalances in the data. "
       ],
@@ -492,7 +492,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Stage 3 Model Design and Development Governance Utilities"
+        "## Stage 3 Model Design and Development Governance Utilities"
       ],
       "metadata": {
         "id": "FwJLI-GCIVTC"
@@ -512,7 +512,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Stage 4 Model Deployment Governance Utilities"
+        "## Stage 4 Model Deployment Governance Utilities"
       ],
       "metadata": {
         "id": "CKA0l02DWtyo"
@@ -522,7 +522,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Challenger Models\n",
+        "### Challenger Models\n",
         "\n",
         "The following function, trains a challenger model using sklearn classifiers, and can be used to challenge our live model by comparing KPIs between our live  and challenger models.\n"
       ],
@@ -597,9 +597,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Stage5 Governance Utilities\n",
+        "## Stage5 Governance Utilities\n",
         "\n",
-        "#### Data drift monitoring\n",
+        "### Data drift monitoring\n",
         "After our model is released into the live environment, we need to ensure that the input data is not significantly different to tghe data the model was trained on. If it is the model outcomes could become unstable. We can use population stability index (PSI) to compare input data with training data, and we can also use a KS test to do the same. "
       ],
       "metadata": {
@@ -805,7 +805,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Fairness Functions\n",
+        "## Fairness Functions\n",
         "\n",
         "@@@@@@@@@@@@@@ MADHU! DECLARE ALL YOUR FUNCTIONS HERE ... WE CAN LATER DECIDE IF WE PACKAGE UP"
       ],
