--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -90,9 +90,13 @@
       "cell_type": "markdown",
       "source": [
         "## Stage1 Business Analysts Governance Utilities\n",
-        "In Stage1, Business Analysis, we will find that we have several stakeholders for the model. We need analytics to verify that we are attaining good performance on each stakeholder's key performance indicators (KPI). (There is also the communication of how our model has achieved these KPIs which we will address towards the end of the workflow).\n",
+        "In Stage1, Business Analysis, for the Governance Framework we need to establish the risk level of the model - in this case high, including its impact on the organisation and technology, regulatory risk, and so on. As the model will be used to make credit decisions which will expose tyhe business to losses, regulatory risk and more, this is a high risk application requiring higher levels of Governance scrutiny. \n",
+        "We also need to establish who the stakeholders are, and specify analytics to verify that we are attaining good performance on each stakeholder's key performance indicators (KPI). (There is also the communication of how our model has achieved these KPIs which we will address towards the end of the workflow).\n",
         "\n",
-        " We list the stakeholder governance functions we will use as utilities in this case study now...\n",
+        "In this section we cover the utility functions that will be needed to monitor (and enforce) stakeholder KPIs.\n",
+        "\n",
+        "\n",
+        "### Stakeholder KPIs\n",
         "\n",
         "#### Stakeholder KPIs: Customer\n",
         "We assume for this case study that the customer KPI is whether they achieve they achieve a positive credit decision. In practie this would extend to the amount of credit extended, and for refusals, why the refusal had been made - and this element we will cover towards the end of the use-case. "
@@ -1538,9 +1542,10 @@
       "source": [
         "# Stage1. Business Case \n",
         "\n",
-        "Define key performance indicators (KPIs). \n",
-        "Data needed, outcomes, model risk level, communication strategy.\n",
-        "Regulatory and Compliance issues \n",
+        "Stage one of model development is the development of the business case; why we need a model, the application, who would use it and how, and what the relative costs and banafits are for it.\n",
+        "\n",
+        "T\n",
+        "\n",
         "\n",
         "Limitations of the models\n",
         "\n",
