--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "id": "35f08271",
       "metadata": {
         "id": "35f08271"
@@ -199,7 +199,7 @@
         "id": "2rm-orUwNZ8W"
       },
       "id": "2rm-orUwNZ8W",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +246,7 @@
         "id": "RFoXKfeUICBw"
       },
       "id": "RFoXKfeUICBw",
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
         "id": "WnD3Vn0yRW9t"
       },
       "id": "WnD3Vn0yRW9t",
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "outputId": "1f78844e-fd99-44f3-e9ed-c1138b3dbf09"
       },
       "id": "WkJlPKl5G16y",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
         "id": "IjrF9ej3IVir"
       },
       "id": "IjrF9ej3IVir",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +540,10 @@
       "source": [
         "from sklearn.ensemble import VotingClassifier\n",
         "\n",
-        "# Create a challenger model by \n",
+        "# Create a challenger model\n",
+        "# requires a list of ready trained models (all_mdls) and corresponding descrtiptions \n",
+        "# (all_mdls_desc) and performance (all_mdls_f1score). Ensembled the better performers\n",
+        "# and uses the resulting model as a challenger \n",
         "def challenger_ensemble_run(all_mdls: list, \n",
         "                  all_mdls_desc: list,\n",
         "                  all_mdls_f1score: list,\n",
@@ -595,7 +598,7 @@
         "id": "wpRpI2MQK_zr"
       },
       "id": "wpRpI2MQK_zr",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -625,7 +628,7 @@
         "\n",
         "#https://www.quora.com/What-is-population-stability-index\n",
         "\n",
-        "def calculate_psi(X_train: np.array,                  \n",
+        "def data_drift_psi(X_train: np.array,                  \n",
         "                  X: np.array, \n",
         "                  buckettype: str='bins', \n",
         "                  buckets: int =10, \n",
@@ -648,7 +651,7 @@
         "       worksofchart.com\n",
         "    '''\n",
         "\n",
-        "    # Sanity\n",
+        "    # sanity\n",
         "    if X_train.shape[1] != X.shape[1]:\n",
         "      raise TypeError('X_train.shape[1] != X.shape[1]')\n",
         "\n",
@@ -726,7 +729,7 @@
         "id": "tRJUaGgnEq8X"
       },
       "id": "tRJUaGgnEq8X",
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -774,7 +777,7 @@
         "# percentage change. For example if KS in the baseline is 80%, or 0.80, and in the current period it is 0.60, then \n",
         "# (0.60 - 0.80)/).80 = -25%. The inner and outer thresholds for this Key Performance Indicator would be -15% to -25%.\n",
         "\n",
-        "def ks_test_result_change(model_score_target_baseline, model_score_target_current, score, target):\n",
+        "def datga_drift_ks_test(model_score_target_baseline, model_score_target_current, score, target):\n",
         "    '''\n",
         "    Args:\n",
         "        model_score_target_baseline: dataframe of the model output during baseline and binary target (1=event, 0=non event), with the colunns \n",
@@ -803,7 +806,7 @@
         "id": "djgWAvcvHdpR"
       },
       "id": "djgWAvcvHdpR",
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -851,7 +854,7 @@
         "id": "r68W8AgUKXV9"
       },
       "id": "r68W8AgUKXV9",
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -893,7 +896,7 @@
         "outputId": "93c8f7cb-10f8-4e21-f2d5-2938d76a0bb6"
       },
       "id": "rAz7D-DRR3lz",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -932,7 +935,7 @@
         "outputId": "f1784b97-50f4-4896-9542-20f5ede33714"
       },
       "id": "xVJjgD0GRdGt",
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -966,7 +969,7 @@
         "id": "WyDpFsccSvvA"
       },
       "id": "WyDpFsccSvvA",
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -983,7 +986,7 @@
         "outputId": "562ce940-dd88-4d07-af68-dc1479bc8b50"
       },
       "id": "H4LcVi6vXv_h",
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,9 +1024,9 @@
         "\n",
         "import math\n",
         "\n",
-        "\n",
-        "# Get the fairness stats for the predictions of a trained model for each category \n",
-        "# found in a column, category_col, in a dataframe, X_test \n",
+        "# Fairness: run the model on different groups, and get precision, accuracy, f1 and so on, for each model run/group\n",
+        "# Calcluates these stats for the predictions of a trained model (mod) for each category \n",
+        "# in a given column (category_col_name) in the data set (X_test). \n",
         "def fairness_stats_get (mod: object, \n",
         "                      X_test: pd.DataFrame, \n",
         "                      y_test: pd.DataFrame, \n",
@@ -1112,7 +1115,7 @@
         "outputId": "183d111b-1236-4bd4-ab31-db9053e00f78"
       },
       "id": "X2QLrTgbKSsS",
-      "execution_count": 317,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1307,7 @@
         "outputId": "7a8c239a-6090-4dad-f5aa-54c33e64c128"
       },
       "id": "fMsVk4TjmVmR",
-      "execution_count": 321,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1510,7 +1513,7 @@
         "outputId": "989b4bf0-154e-47a4-a325-7ab8365f9cd0"
       },
       "id": "TRy2N7-eRaJP",
-      "execution_count": 369,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1605,7 +1608,7 @@
         "outputId": "37fb404c-eaa8-49f7-b45e-a00b0885b019"
       },
       "id": "CysAAt4-AdN8",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1634,7 +1637,7 @@
         "outputId": "8732566a-def3-42a1-cfff-d8cb60f2b321"
       },
       "id": "LusHe3a2BF_t",
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1667,12 +1670,12 @@
         "id": "hhMDMb1xB0yk"
       },
       "id": "hhMDMb1xB0yk",
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 187,
+      "execution_count": null,
       "id": "c26b1a44",
       "metadata": {
         "id": "c26b1a44"
@@ -1696,7 +1699,7 @@
         "outputId": "1a6b4436-1c43-499e-e424-d920fe0055ca"
       },
       "id": "pwvlymBMFqsW",
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1748,7 @@
         "id": "0n2YS32BDd6N"
       },
       "id": "0n2YS32BDd6N",
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1774,7 +1777,7 @@
         "outputId": "49468ef9-ce6c-440f-fc5d-f658b1c2dbd3"
       },
       "id": "NQaeBvyxMddk",
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1822,7 +1825,7 @@
         "outputId": "72b83546-1cac-483b-c321-d3baaaf5d58a"
       },
       "id": "nPksuW6KKdhV",
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1880,7 +1883,7 @@
         "id": "eButjMDcPwHz"
       },
       "id": "eButjMDcPwHz",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1897,7 +1900,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": null,
       "id": "c62115a2",
       "metadata": {
         "scrolled": true,
@@ -2435,7 +2438,7 @@
         "outputId": "439e787d-c053-4e27-e0c5-7023d0846ff0"
       },
       "id": "wljCC_8z_jL2",
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2486,7 +2489,7 @@
         "outputId": "8f1a5216-95a8-46b3-985f-71d727ec65ed"
       },
       "id": "OKIZQIrJRJOF",
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2517,7 +2520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": null,
       "id": "9d772e1c",
       "metadata": {
         "id": "9d772e1c",
@@ -2620,12 +2623,12 @@
         "id": "eTjDqiD5f_j1"
       },
       "id": "eTjDqiD5f_j1",
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 193,
+      "execution_count": null,
       "id": "f9517124",
       "metadata": {
         "id": "f9517124"
@@ -2669,7 +2672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "id": "af12e96b",
       "metadata": {
         "id": "af12e96b"
@@ -2702,7 +2705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": null,
       "id": "c09b7144",
       "metadata": {
         "id": "c09b7144",
@@ -2870,7 +2873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "id": "739e0d7d",
       "metadata": {
         "id": "739e0d7d"
@@ -2907,7 +2910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "id": "b8cb61d7",
       "metadata": {
         "id": "b8cb61d7",
@@ -2967,7 +2970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "id": "5caebbb0",
       "metadata": {
         "id": "5caebbb0",
@@ -3039,7 +3042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "id": "5dadf40d",
       "metadata": {
         "id": "5dadf40d"
@@ -3068,7 +3071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "id": "4ff54d69",
       "metadata": {
         "id": "4ff54d69",
@@ -3128,7 +3131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "id": "c031433f",
       "metadata": {
         "id": "c031433f",
@@ -3188,7 +3191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "id": "750a6983",
       "metadata": {
         "id": "750a6983",
@@ -3292,7 +3295,7 @@
         "id": "TTAnktvT73Ql"
       },
       "id": "TTAnktvT73Ql",
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3315,7 +3318,7 @@
         "id": "vNHwc1QP7wCb"
       },
       "id": "vNHwc1QP7wCb",
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3334,7 +3337,7 @@
         "outputId": "57ab517e-82d0-4460-e4d4-859f04274bc5"
       },
       "id": "GuXSRiAd7n95",
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3391,7 +3394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "id": "8dbc9854",
       "metadata": {
         "id": "8dbc9854"
@@ -3410,7 +3413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "id": "c0beacf7",
       "metadata": {
         "colab": {
@@ -3460,7 +3463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "id": "d6de0276",
       "metadata": {
         "colab": {
@@ -3543,7 +3546,7 @@
         "id": "tUbobdmKR9Or"
       },
       "id": "tUbobdmKR9Or",
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3581,7 +3584,7 @@
         "id": "G3Dro5K_QkgZ"
       },
       "id": "G3Dro5K_QkgZ",
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3729,7 +3732,7 @@
         "outputId": "7c8baae1-036d-4504-f686-8a047ef0af79"
       },
       "id": "cyji4ydlQTVZ",
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3825,7 +3828,7 @@
         "outputId": "d4feffe9-884d-439a-9400-279e2796c2f8"
       },
       "id": "BuJjXTsYMbBs",
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3914,7 +3917,7 @@
         "outputId": "e57c9c10-1f3e-4963-fa6d-3caf6932e7bd"
       },
       "id": "xjkMTtAW22C6",
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
