Stage 5a: Data Drift added extra print line to make it look nicer

--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -5427,7 +5427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "id": "QREnQ1poSmRR",
    "metadata": {
     "id": "QREnQ1poSmRR"
@@ -5439,6 +5439,7 @@
      "text": [
       "Target PSI value is  0.0009667297237886886 \n",
       "\n",
+      "The feature CSI values are:\n",
       "duration CSI is OK =  0.09407982994939311\n",
       "credit_amount CSI is OK =  0.09407982994939311\n",
       "installment_commitment CSI is OK =  0.09407982994939311\n",
@@ -5506,6 +5507,7 @@
     "print(\"Target PSI value is \",data_drift_target, \"\\n\" )\n",
     "\n",
     "# Print out the features CSI values\n",
+    "print(\"The feature CSI values are:\")\n",
     "index_value = 0\n",
     "for x in columns_features:\n",
     "    if data_drift_features[index_value] > 0.2:\n",
