--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -101,31 +101,67 @@
         "os.chdir('FinGov')\n",
         "\n",
         "# Now import the objects from the repo\n",
+        "from StakeholderKPIReporting import StakeholderKPIReporting\n",
         "from GovernanceUtils import GovernanceUtils\n",
         "from FairnessUtils import FairnessUtils\n",
-        "from StakeholderKPIReporting import StakeholderKPIReporting"
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uunH93sCCS1W",
-        "outputId": "d56fa6db-c0f2-46c8-bbdf-422b918ab6c0"
+        "outputId": "2d55fe8d-5a72-46cc-a685-93ba629eeaf5"
       },
       "id": "uunH93sCCS1W",
-      "execution_count": 3,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'FinGov'...\n",
-            "remote: Enumerating objects: 170, done.\u001b[K\n",
-            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (33/33), done.\u001b[K\n",
-            "remote: Total 170 (delta 18), reused 0 (delta 0), pack-reused 137\u001b[K\n",
-            "Receiving objects: 100% (170/170), 80.86 KiB | 1.01 MiB/s, done.\n",
-            "Resolving deltas: 100% (94/94), done.\n"
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting git+https://github.com/danphilps/FinGov.git\n",
+            "  Cloning https://github.com/danphilps/FinGov.git to /tmp/pip-req-build-y_7z31_g\n",
+            "  Running command git clone -q https://github.com/danphilps/FinGov.git /tmp/pip-req-build-y_7z31_g\n",
+            "Requirement already satisfied: ipython>=6 in /usr/local/lib/python3.8/dist-packages (from FinGov==0.0.1) (7.9.0)\n",
+            "Requirement already satisfied: nbformat>=4 in /usr/local/lib/python3.8/dist-packages (from FinGov==0.0.1) (5.7.0)\n",
+            "Requirement already satisfied: nbconvert>=5 in /usr/local/lib/python3.8/dist-packages (from FinGov==0.0.1) (5.6.1)\n",
+            "Requirement already satisfied: requests>=2 in /usr/local/lib/python3.8/dist-packages (from FinGov==0.0.1) (2.23.0)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (4.8.0)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (2.6.1)\n",
+            "Requirement already satisfied: jedi>=0.10 in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (0.18.2)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (4.4.2)\n",
+            "Requirement already satisfied: prompt-toolkit<2.1.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (2.0.10)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (57.4.0)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (0.7.5)\n",
+            "Requirement already satisfied: backcall in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (0.2.0)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.8/dist-packages (from ipython>=6->FinGov==0.0.1) (5.6.0)\n",
+            "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /usr/local/lib/python3.8/dist-packages (from jedi>=0.10->ipython>=6->FinGov==0.0.1) (0.8.3)\n",
+            "Requirement already satisfied: mistune<2,>=0.8.1 in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (0.8.4)\n",
+            "Requirement already satisfied: jinja2>=2.4 in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (2.11.3)\n",
+            "Requirement already satisfied: entrypoints>=0.2.2 in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (0.4)\n",
+            "Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (1.5.0)\n",
+            "Requirement already satisfied: defusedxml in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (0.7.1)\n",
+            "Requirement already satisfied: testpath in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (0.6.0)\n",
+            "Requirement already satisfied: jupyter-core in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (5.1.0)\n",
+            "Requirement already satisfied: bleach in /usr/local/lib/python3.8/dist-packages (from nbconvert>=5->FinGov==0.0.1) (5.0.1)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.8/dist-packages (from jinja2>=2.4->nbconvert>=5->FinGov==0.0.1) (2.0.1)\n",
+            "Requirement already satisfied: fastjsonschema in /usr/local/lib/python3.8/dist-packages (from nbformat>=4->FinGov==0.0.1) (2.16.2)\n",
+            "Requirement already satisfied: jsonschema>=2.6 in /usr/local/lib/python3.8/dist-packages (from nbformat>=4->FinGov==0.0.1) (4.3.3)\n",
+            "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=2.6->nbformat>=4->FinGov==0.0.1) (22.1.0)\n",
+            "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=2.6->nbformat>=4->FinGov==0.0.1) (0.19.2)\n",
+            "Requirement already satisfied: importlib-resources>=1.4.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema>=2.6->nbformat>=4->FinGov==0.0.1) (5.10.0)\n",
+            "Requirement already satisfied: zipp>=3.1.0 in /usr/local/lib/python3.8/dist-packages (from importlib-resources>=1.4.0->jsonschema>=2.6->nbformat>=4->FinGov==0.0.1) (3.11.0)\n",
+            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.8/dist-packages (from prompt-toolkit<2.1.0,>=2.0.0->ipython>=6->FinGov==0.0.1) (1.15.0)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.8/dist-packages (from prompt-toolkit<2.1.0,>=2.0.0->ipython>=6->FinGov==0.0.1) (0.2.5)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests>=2->FinGov==0.0.1) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests>=2->FinGov==0.0.1) (2022.9.24)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests>=2->FinGov==0.0.1) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests>=2->FinGov==0.0.1) (2.10)\n",
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.8/dist-packages (from bleach->nbconvert>=5->FinGov==0.0.1) (0.5.1)\n",
+            "Requirement already satisfied: platformdirs>=2.5 in /usr/local/lib/python3.8/dist-packages (from jupyter-core->nbconvert>=5->FinGov==0.0.1) (2.5.4)\n",
+            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.8/dist-packages (from pexpect->ipython>=6->FinGov==0.0.1) (0.7.0)\n"
           ]
         }
       ]
