--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -15,6 +15,8 @@
       "source": [
         "In this code lab we will develop models to predict bad consumer credits for driving fair and interpretable lending decisions. We develop the models within the 5 stage Governance Framework, and explain how models can validated, monitored and made to be fair.  \n",
         "\n",
+        "We will step through the 5 Governance Stages of model development, fleshing out selected challenges and solutions to the biases we have learned about on the course. The pace will be fast but please experiment with the code to get a feel for the principles of best practice. \n",
+        "\n",
         "Dataset: Credit risk https://datahub.io/machine-learning/credit-g, contributed by Dr. Hans Hofmann, UCI German Credit Data. UCI Machine Learning Repository [http://archive.ics.uci.edu/ml]. Irvine, CA: University of California, School of Information and Computer Science."
       ],
       "metadata": {
