--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -1825,7 +1825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 44,
       "id": "tUbobdmKR9Or",
       "metadata": {
         "id": "tUbobdmKR9Or"
@@ -1841,25 +1841,10 @@
         "X_upsampled_smote = pd.read_csv('data/X_upsampled_smote.csv', index_col=0)\n",
         "y_upsampled_smote = pd.read_csv('data/y_upsampled_smote.csv', index_col=0, dtype=int)\n",
         "\n",
-        "# Test and train set    \n",
-        "# See comments above regarding this deterministic split function.\n",
-        "X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X_upsampled_smote, y_upsampled_smote, test_size=0.3, random_state=None) \n",
-        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
-        "\n",
         "# Cross validation as a subset of \n",
         "# See comments above regarding this deterministic split function.\n",
-        "X_train_cv, X_cv, y_train_cv, y_cv = CFACreditUseCaseUtils.train_test_split_deterministic(X_train, y_train, test_size=0.3, random_state=None) \n",
-        "#X_train_cv, X_cv, y_train_cv, y_cv = train_test_split(X_train, y_train, test_size=0.3, random_state=None)\n",
-        "\n",
-        "#****************************\n",
-        "# Keep record of protected for bias testing later\n",
-        "X_train_protected = X_train[protected_cols]\n",
-        "X_test_protected = X_test[protected_cols]\n",
-        "\n",
-        "# Remember to remove protected columns before training\n",
-        "X_train = X_train.drop(protected_cols, axis=1)\n",
-        "X_test = X_test.drop(protected_cols, axis=1)\n",
-        "#****************************"
+        "X_train_cv, X_cv, y_train_cv, y_cv = CFACreditUseCaseUtils.train_test_split_deterministic(X_upsampled_smote, y_upsampled_smote, test_size=0.3, random_state=None) \n",
+        "#X_train_cv, X_cv, y_train_cv, y_cv = train_test_split(X_train, y_train, test_size=0.3, random_state=None)\n"
       ]
     },
     {
@@ -1874,7 +1859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 45,
       "id": "cyji4ydlQTVZ",
       "metadata": {
         "id": "cyji4ydlQTVZ",
@@ -1882,7 +1867,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 840
         },
-        "outputId": "16058720-9acb-4140-f243-a42ded8f1180"
+        "outputId": "178db7c2-30eb-4d3e-9d2c-88f6b94e3ca7"
       },
       "outputs": [
         {
